Interlace stereo is broken in 2.78 #49861

Closed
opened 2016-10-27 22:58:31 +02:00 by Jonathan Bouchard · 7 comments

The interlaced stereo modes aren't working since 2.78. To reproduce:

Using the default settings, from the default file:

  • Check "Views" in the properties of "Render Layers"
  • Press Num Pad "0" to view through the active camera
    • An anaglyph stereo version of the scene is shown in the viewport

From the "Info/Window" menu select "Set Stereo 3D" and change the display mode to "Interlace" (the interlace type of your choice)

 - The viewport reverts to "mono" (shows only the left view). In 2.77 / 2.77a, an interlaced stereo was shown.
The interlaced stereo modes aren't working since 2.78. To reproduce: Using the default settings, from the default file: - Check "Views" in the properties of "Render Layers" - Press Num Pad "0" to view through the active camera - An anaglyph stereo version of the scene is shown in the viewport # From the "Info/Window" menu select "Set Stereo 3D" and change the display mode to "Interlace" (the interlace type of your choice) - The viewport reverts to "mono" (shows only the left view). In 2.77 / 2.77a, an interlaced stereo was shown.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @exophoric

Added subscriber: @exophoric
Jonathan Bouchard changed title from Interlace stereo broken in 2.78 to Interlace stereo is broken in 2.78 2016-10-27 23:00:47 +02:00

Added subscriber: @crantisz

Added subscriber: @crantisz

I can confim this bug.

It worked in 2.77, but doesn't work in 2.78
Снимок экрана от 2016-11-26 11-09-29.png

I can confim this bug. It worked in 2.77, but doesn't work in 2.78 ![Снимок экрана от 2016-11-26 11-09-29.png](https://archive.blender.org/developer/F406381/Снимок_экрана_от_2016-11-26_11-09-29.png)
Dalai Felinto was assigned by Aaron Carlisle 2016-12-27 20:47:09 +01:00

This was introduced in this commit: 5bd9e832

This was introduced in this commit: 5bd9e832

This issue was referenced by 070f22c440

This issue was referenced by 070f22c44082c1a7405795744cec667157abbfbf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49861
No description provided.